[project]
name = "text-graph"
version = "0.1.0"
description = "A Dash-based tool for word graph visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dash>=3.0.3",
    "dash-cytoscape>=1.0.2",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
